# dpt-demo-python-test

./: Makefile  README.md  example_implementation.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_tests.py  setup.cfg
controllers/: __init__.py  book_controller.py  loan_controller.py  reader_controller.py
database/: __init__.py  database_manager.py  library.db
models/: __init__.py  book.py  loan.py  reader.py
tests/: test_controllers.py  test_database.py  test_models.py
views/: __init__.py  book_view.py  loan_view.py  main_window.py  reader_view.py
